# NovelCraft

./: README.md
client/: .gitattributes  .gitignore  CHANGELOG.md  README.md
client/.github/workflows/: activation.yml  build.yml  publish.yml
client/Assets/Editor/: EditorSubSprites.cs
client/Assets/Fonts/: SIMHEI SDF.asset  SIMKAI SDF.asset  msyh SDF.asset  msyhbd SDF.asset  msyhl SDF.asset  simsun SDF.asset
client/Assets/Plugins/: Link.txt
client/Assets/Scenes/: Menu.unity  Play.unity  Record.unity
client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
client/WebGL/: external_servers.json  index.html  web.config
docs/: CNAME  README.md  _coverpage.md  _sidebar.md  definitions.md  export_a_level_from_minecraft.md  faq.md  file_formats.md  getting_started.md  index.html  protocols.md  sdk.md
docs/schemas/files/: block.json  entity.json  item.json  level_data.json  loot_table.json  recipe.json
docs/schemas/protocols/: after_block_change_server.json  after_entity_attack_server.json  after_entity_create_server.json  after_entity_despawn_server.json  after_entity_hurt_server.json  after_entity_orientation_change_server.json  after_entity_position_change_server.json  after_entity_remove_server.json  after_entity_spawn_server.json  after_player_inventory_change_server.json  after_player_switch_main_hand_server.json  common.json  error_server.json  get_blocks_and_entities_client.json  get_blocks_and_entities_server.json  get_player_info_client.json  get_player_info_server.json  get_tick_client.json  get_tick_server.json  perform_attack_client.json  perform_craft_client.json  perform_drop_item_client.json  perform_jump_client.json  perform_look_at_client.json  perform_merge_slots_client.json  perform_move_client.json  perform_rotate_client.json  perform_swap_slots_client.json  perform_switch_main_hand_slot_client.json  perform_use_client.json  ping_pong_client.json  ping_pong_server.json
examples/c/: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
examples/c/.github/workflows/: build.yml
examples/c/src/: main.c
examples/csharp/: .dockerignore  .gitattributes  .gitignore  Agent.sln  Dockerfile  README.md  omnisharp.json  tooth.json
examples/csharp/.github/: PULL_REQUEST_TEMPLATE.md
examples/csharp/src/: Agent.csproj  Program.cs
examples/python/: Dockerfile  README.md  requirements.txt  tooth.json
examples/python/src/: main.py
sdks/c/: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
sdks/c/.github/workflows/: build.yml
sdks/c/include/: agent.h  array.h  block.h  block_source.h  dictionary.h  entity.h  entity_source.h  inventory.h  item_stack.h  list.h  logger.h  optional.h  orientation.h  position.h  queue.h  sdk.h  stack.h
sdks/c/include/internal/: agent.h  block.h  block_source.h  client.h  entity.h  entity_source.h  inventory.h  item_stack.h  logger.h  message.h  sdk.h  section.h
sdks/c/samples/log_messages/: main.c
sdks/c/samples/run_client/: main.c
sdks/c/src/: agent.c  array.c  block.c  block_source.c  client.c  dictionary.c  entity.c  entity_source.c  inventory.c  item_stack.c  list.c  logger.c  message.c  queue.c  sdk.c  section.c  stack.c
sdks/c/test/: array_test.cc  dictionary_test.cc  item_stack_test.cc  list_test.cc  queue_test.cc  section_test.cc  stack_test.cc
sdks/dotnet/: .gitignore  CHANGELOG.md  Doxyfile  README.md
sdks/dotnet/src/: Agent.cs  Block.cs  BlockSource.cs  Client.cs  Entity.cs  EntitySource.cs  IAgent.cs  IBlock.cs  IBlockSource.cs  IClient.cs  IEntity.cs  IEntitySource.cs  IInventory.cs  IItemStack.cs  IOrientation.cs  IPosition.cs  Inventory.cs  ItemStack.cs  Orientation.cs  Position.cs  Sdk.cs  Sdk.csproj  Section.cs
sdks/dotnet/test/: Tests.csproj
sdks/python/: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
sdks/python/.github/workflows/: build.yml  publish.yml
sdks/python/docs/: agent.md  block.md  block_source.md  entity.md  entity_source.md  index.md  inventory.md  item_stack.md  logger.md  orientation.md  position.md  sdk.md
sdks/python/examples/perform_actions/: main.py
sdks/python/examples/run_client/: main.py
sdks/python/src/novelcraft/: __init__.py
sdks/python/src/novelcraft/sdk/: __init__.py  agent.py  block.py  block_source.py  client.py  entity_source.py  inventory.py  message.py  sdk.py  section.py
server/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md
server/.github/workflows/: build.yml  publish.yml
server/assets/: config.json  whitelist.json
server/assets/worlds/: A.nclevel  B.nclevel  C.nclevel  D.nclevel
server/src/: AgentInfo.cs  Binder.GameSubscription.cs  Binder.ServerSubscription.cs  Binder.cs  Config.cs  Main.cs  Server.csproj
server/src/Game/: Game.Block.cs  Game.Definition.cs  Game.Entity.cs  Game.Event.cs  Game.Item.cs  (+11 more)
server/tests/: Tests.csproj  TestsType.cs
tools/mc_level_exporter/: .gitignore  CHANGELOG.md  README.md
(+510 files in other folders)
